Prevent arrow wrapping

--- a/site/components/case-study/style.css
+++ b/site/components/case-study/style.css
@@ -65,6 +65,12 @@
 }
 
 .lastWord {
+  display: inline;
+  white-space: nowrap;
+}
+
+.lastWord i {
+  width: 22px;
   display: inline-block;
 }
 
